# sat_toolkit

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: publish.yml
sat_toolkit/: __init__.py  _cnf_util.pyx  formula.pyi  formula.pyx
src/sat_toolkit/: formula.pyi  formula.pyx
tests/: foo.py  test_cnf.py  test_partition.py  test_xor_cnf.py
