[build-system]
requires = ["setuptools>=74.1.0", "wheel", "Cython"]

[project]
name = "sat-toolkit"
version = "0.5.0"
dependencies = [
   "numpy>=2.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Marcel Nageler", email = "marcel.nageler@tugraz.at"},
]

description = "Tool for manipulating CNF formulas"
readme = "README.md"
license = "MIT"
classifiers = [
   "Operating System :: POSIX :: Linux",
   "Operating System :: MacOS",
   "Programming Language :: Python",
   "Programming Language :: Cython",
   "Programming Language :: C",
]


[project.urls]
Repository = "https://github.com/fanosta/sat_toolkit"
"Bug Tracker" = "https://github.com/fanosta/sat_toolkit/issues"


[tool.setuptools]
ext-modules = [
  {name = "sat_toolkit.formula", sources = ["sat_toolkit/formula.pyx"]}
]

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "pytest>=8.4.2",
]
